--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -3,7 +3,8 @@
   position: relative;
   display: inline-block;
 
-  a {
+  a,
+  .rs-dropdown-link {
     white-space: nowrap;
   }
 }
@@ -22,7 +23,8 @@
   @include border-radius(3px);
   @include box-shadow(0 0 9px 2px rgba(0, 0, 0, 0.2));
 
-  a {
+  a,
+  .rs-dropdown-link {
     display: block;
     padding: 0 7px;
   }
@@ -43,7 +45,8 @@
   white-space: nowrap;
 }
 
-.rs-dropdown-menu > li:first-child > .rs-dropdown-category {
+.rs-dropdown-menu > li:first-child > .rs-dropdown-category,
+.rs-dropdown-menu > .rs-dropdown-item:first-child > .rs-dropdown-category {
   margin-top: 0;
 }
 
@@ -67,7 +70,8 @@
     @include border-corner-radius(bottom, left, 3px);
     @include border-corner-radius(bottom, right, 3px);
 
-    a {
+    a,
+    .rs-dropdown-link {
       padding: 2px 15px;
       color: #333;
       font-family: $alt-font-family;
@@ -82,7 +86,8 @@
       }
     }
 
-    > li:first-child {
+    > li:first-child,
+    > .rs-dropdown-item:first-child {
       margin-top: 12px;
     }
   }
@@ -95,7 +100,8 @@
   }
 
   .rs-dropdown-category,
-  .rs-dropdown-menu > li:first-child > .rs-dropdown-category {
+  .rs-dropdown-menu > li:first-child > .rs-dropdown-category,
+  .rs-dropdown-menu > .rs-dropdown-item:first-child > .rs-dropdown-category {
     margin: 12px 0 0;
   }
 
@@ -123,13 +129,15 @@
     font-smoothing: antialiased;
     padding: 8px 0;
 
-    span {
+    span,
+    .rs-dropdown-text {
       color: #ccc;
       padding: 2px 15px;
       text-decoration: none;
     }
 
-    a {
+    a,
+    .rs-dropdown-link {
       color: #ccc;
       padding: 2px 15px;
       text-decoration: none;
