updating variable widths to just labels in horizontal forms

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -168,7 +168,7 @@ textarea {
 }
 
 /* Create/Horizontal Forms */
-@mixin set-form-control-labels($label-width: 100px, $value-margin-left: 20px){
+@mixin set-form-control-labels($label-width: 160px, $value-margin-left: 20px){
   .rs-control-label {
     width: $label-width;
   }
@@ -198,32 +198,7 @@ textarea {
     padding-top: 2px;
   }
 
-  // Variable Width Form Labels/Controls
   @include set-form-control-labels();
-
-  .rs-control-group-xsmall {
-    @include set-form-control-labels(60px);
-  }
-
-  .rs-control-group-small {
-    @include set-form-control-labels(80px);
-  }
-
-  .rs-control-group-medium {
-    @include set-form-control-labels(100px);
-  }
-
-  .rs-control-group-large {
-    @include set-form-control-labels(120px);
-  }
-
-  .rs-control-group-xlarge {
-    @include set-form-control-labels(150px);
-  }
-
-  .rs-control-group-xxlarge {
-    @include set-form-control-labels(180px);
-  }
 
   input[type="text"],
   input[type="password"],
@@ -236,16 +211,33 @@ textarea {
 
 }
 
-/* Create Forms */
-@mixin set-form-key-values($label-width: 100px, $value-margin-left: 20px){
-  .rs-detail-key {
-    width: $label-width;
+.rs-form-horizontal {
+  &.rs-form-xsmall {
+    @include set-form-control-labels(60px);
   }
-  .rs-detail-value {
-    margin-left: $label-width + $value-margin-left;
+
+  &.rs-form-small {
+    @include set-form-control-labels(80px);
+  }
+
+  &.rs-form-medium {
+    @include set-form-control-labels(100px);
+  }
+
+  &.rs-form-large {
+    @include set-form-control-labels(120px);
+  }
+
+  &.rs-form-xlarge {
+    @include set-form-control-labels(150px);
+  }
+
+  &.rs-form-xxlarge {
+    @include set-form-control-labels(180px);
   }
 }
 
+/* Create Forms */
 .rs-form-create {
   label:after {
     content: none;
@@ -283,30 +275,11 @@ textarea {
     }
   }
 
-  @include set-form-key-values();
-
-  .rs-detail-item-xsmall {
-    @include set-form-key-values(60px);
+  .rs-detail-key {
+    width: 160px;
   }
-
-  .rs-detail-item-small {
-    @include set-form-key-values(80px);
-  }
-
-  .rs-detail-item-medium {
-    @include set-form-key-values(100px);
-  }
-
-  .rs-detail-item-large {
-    @include set-form-key-values(120px);
-  }
-
-  .rs-detail-item-xlarge {
-    @include set-form-key-values(150px);
-  }
-
-  .rs-detail-item-xxlarge {
-    @include set-form-key-values(180px);
+  .rs-detail-value {
+    margin-left: 180px;
   }
 }
 
