--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -4,7 +4,8 @@
   display: inline-block;
 
   a,
-  .rs-dropdown-link {
+  .rs-dropdown-link,
+  .rs-dropdown-text {
     white-space: nowrap;
   }
 }
@@ -48,7 +49,7 @@
 .rs-dropdown-item.disabled {
   a,
   .rs-dropdown-link {
-    color: #999;
+    color: $grey300;
     cursor: default;
     text-decoration: none;
   }
@@ -122,16 +123,20 @@
     font-weight: 200;
   }
 
+  .rs-icon-external {
+    @include icon-sprite(external);
+  }
+
   .rs-dropdown-item.disabled {
     a,
     .rs-dropdown-link {
-      color: #999;
+      color: $grey400;
       background-color: transparent;
     }
-  }
 
-  .rs-icon-external {
-    @include icon-sprite(external);
+    .rs-dropdown-caption {
+      color: $grey400;
+    }
   }
 }
 
@@ -204,8 +209,12 @@
   .rs-dropdown-item.disabled {
     a,
     .rs-dropdown-link {
-      color: #666;
+      color: $grey500;
       background-color: transparent;
+    }
+
+    .rs-dropdown-caption {
+      color: $grey500;
     }
   }
 }
