--- a/lib/stylesheets/patterns/_status.scss
+++ b/lib/stylesheets/patterns/_status.scss
@@ -48,7 +48,7 @@
     padding-left: 20px;
   }
 
-  &.rs-status-ok-processing {
+  &.rs-status-processing-ok {
     color: $white;
     background: $green url('loading-white-green.gif') 4px center no-repeat;
     padding-left: 20px;
@@ -80,6 +80,6 @@
   color: $yellow;
 }
 
-.rs-status-ok-processing {
+.rs-status-processing-ok {
   color: $green;
 }
