Add error progress states and animations

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -105,6 +105,10 @@
 
 .rs-table-status-error {
   background-color: $red !important;
+
+  &.rs-table-status-striped {
+    background-image: url('table-status-error.gif');
+  }
 }
 
 /* Table-Based Styles */
