--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -110,7 +110,8 @@ dd {
 hr {
   margin: 0 0 $base-line-height;
   border: 0;
-  border-top: 1px solid $grey-light;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #fff;
 }
 
 // Typography Classes
@@ -125,10 +126,16 @@ hr {
     margin: 0 0 15px;
   }
 
+  h4 {
+    margin-bottom: 3px;
+  }
+
+  p {
+    color: #666;
+  }
+
   hr {
     margin: 20px 0;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #fff;
   }
 
   ul {
