--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -148,8 +148,12 @@ hr {
   }
 
   pre {
+    display:block;
+    overflow: auto;
     background: $white;
-    padding: 5px 0 5px 10px;
+    padding: 5px 10px;
+    white-space: pre;
+    word-wrap: normal;
     @include border-radius(3px);
   }
 }
