removing border from embedded tables inside of tabs

--- a/lib/stylesheets/patterns/_tabs.scss
+++ b/lib/stylesheets/patterns/_tabs.scss
@@ -38,6 +38,10 @@
 .rs-tab-content {
   border: 1px solid $grey50;
   border-top: none;
+
+  .rs-embedded-list-table-wrapper  {
+    border: none;
+  }
 }
 
 .rs-tab-pane {
