--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -71,10 +71,12 @@ h4 {
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
+  margin-bottom: 5px;
 }
 
 h5 {
   font-size: 13px;
+  margin-bottom: 5px;
 }
 
 h6 {
