[New Feature][Issue-47] Adds focus-panel and login to canon.scss

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -31,3 +31,5 @@
 @import "patterns/tabs";
 @import "patterns/tooltip";
 @import "patterns/status-list";
+@import "patterns/focus-panel";
+@import "patterns/login";
