--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -168,16 +168,6 @@ textarea {
 }
 
 /* Create/Horizontal Forms */
-@mixin set-form-control-labels($label-width: 160px, $value-margin-left: 20px){
-  .rs-control-label {
-    width: $label-width;
-  }
-  .rs-controls,
-  .rs-controls-static {
-    margin-left: $label-width + $value-margin-left;
-  }
-}
-
 .rs-form-horizontal,
 .rs-form-create {
   .rs-control-group,
@@ -198,8 +188,6 @@ textarea {
     padding-top: 2px;
   }
 
-  @include set-form-control-labels();
-
   input[type="text"],
   input[type="password"],
   input[type="file"],
@@ -209,32 +197,6 @@ textarea {
     margin-bottom: 0;
   }
 
-}
-
-.rs-form-horizontal {
-  &.rs-form-xsmall {
-    @include set-form-control-labels(60px);
-  }
-
-  &.rs-form-small {
-    @include set-form-control-labels(80px);
-  }
-
-  &.rs-form-medium {
-    @include set-form-control-labels(100px);
-  }
-
-  &.rs-form-large {
-    @include set-form-control-labels(120px);
-  }
-
-  &.rs-form-xlarge {
-    @include set-form-control-labels(150px);
-  }
-
-  &.rs-form-xxlarge {
-    @include set-form-control-labels(180px);
-  }
 }
 
 /* Create Forms */
@@ -273,13 +235,6 @@ textarea {
     .rs-key-divider {
       color: $grey600;
     }
-  }
-
-  .rs-detail-key {
-    width: 160px;
-  }
-  .rs-detail-value {
-    margin-left: 180px;
   }
 }
 
@@ -373,4 +328,47 @@ textarea {
     @include icon(13px, 12px);
     @include icon-sprite(exclamation-sign);
   }
+}
+
+@mixin set-form-control-labels($label-width: 160px, $value-margin-left: 20px){
+  .rs-control-label {
+    width: $label-width;
+  }
+  .rs-controls,
+  .rs-controls-static {
+    margin-left: $label-width + $value-margin-left;
+  }
+
+  .rs-detail-key {
+    width: $label-width;
+  }
+  .rs-detail-value {
+    margin-left: $label-width + $value-margin-left;
+  }
+}
+
+@include set-form-control-labels();
+
+.rs-form-xsmall {
+  @include set-form-control-labels(60px);
+}
+
+.rs-form-small {
+  @include set-form-control-labels(80px);
+}
+
+.rs-form-medium {
+  @include set-form-control-labels(100px);
+}
+
+.rs-form-large {
+  @include set-form-control-labels(120px);
+}
+
+.rs-form-xlarge {
+  @include set-form-control-labels(150px);
+}
+
+.rs-form-xxlarge {
+  @include set-form-control-labels(180px);
 }
