updating connect static site options and updating demo to use new url

--- a/html/_layouts/demos.html
+++ b/html/_layouts/demos.html
@@ -31,9 +31,9 @@
 </head>
 <body class="rs-fixed">
   <div class="rs-wrapper">
-    {% include utility_nav.html %}
-    {% include primary_nav.html %}
-    {% include secondary_nav.html %}
+    {% include demos/utility_nav.html %}
+    {% include demos/primary_nav.html %}
+    {% include demos/secondary_nav.html %}
 
     <div class="rs-body">
       <div class="rs-container">
@@ -43,6 +43,6 @@
     <div class="rs-push"></div>
   </div>
 
-  {% include footer.html %}
+  {% include demos/footer.html %}
 </body>
 </html>
