fix jekyll base url across demo and docs

--- a/docs/_includes/demos/primary_nav.html
+++ b/docs/_includes/demos/primary_nav.html
@@ -8,7 +8,7 @@
 				<a class="rs-dropdown-toggle" href="javascript:void(0);">Infrastructure <i class="rs-caret"></i></a>
 				<ul class="rs-dropdown-menu">
 					<li class="rs-dropdown-item"><span class="rs-dropdown-category">Infrastructure</span></li>
-					<li class="rs-dropdown-item"><a class="rs-dropdown-link" href="{{ site.baseurl }}demos/index.html">Servers</a></li>
+					<li class="rs-dropdown-item"><a class="rs-dropdown-link" href="{{ site.baseurl }}/demos/index.html">Servers</a></li>
 					<li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Load Balancers</a></li>
 					<li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">DNS</a></li>
 					<li class="rs-dropdown-item"><a class="rs-dropdown-link" href="#">Networks</a></li>
