--- a/docs/_includes/demos/utility_nav.html
+++ b/docs/_includes/demos/utility_nav.html
@@ -2,7 +2,7 @@
   <div class="rs-container">
     <ul class="rs-nav">
       <li><a href="index.html" >MyRackspace</a></li>
-      <li class="active"><a href="{{ site.baseurl }}demos/index.html" >MyCloud</a></li>
+      <li class="active"><a href="{{ site.baseurl }}/demos/index.html" >MyCloud</a></li>
       <li><a href="index.html" >Private Cloud</a></li>
       <li><a href="index.html" >Cloud Sites</a></li>
     </ul>
