--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,15 +4,15 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="http://ci.canon.rackspace.com/view/Canon/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.css">
-  <link rel="stylesheet" type="text/css" href="/css/site.css">
-  <link rel="stylesheet" type="text/css" href="/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/canon.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/site.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css">
 
-  <script type="application/javascript" src="http://ci.canon.rackspace.com/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/canon.min.js"></script>
   <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
-  <script type="application/javascript" src="/js/bootstrap.min.js"></script>
-  <script type="application/javascript" src="/js/site.js"></script>
-  <script type="application/javascript" src="/js/popover.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/js/site.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/js/popover.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
