[New Feature][UX-Pattern List View] Updates popovers with re-form to prep for future addition of processing throbber

--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -1,12 +1,29 @@
-<div class="rs-popover hidden" id="confirm-delete-popover">
+<div class="rs-popover invisible" id="confirm-delete-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <div class="rs-popover-body">
-      <strong>Permanently delete</strong> this [item]?
-    </div>
-    <div class="rs-popover-footer rs-btn-group">
-      <div class="rs-btn rs-btn-primary">Delete Item</div>
-      <div class="rs-btn rs-btn-link">Cancel</div>
-    </div>
+    <form class="rs-form rs-form-horizontal">
+      <div class="rs-popover-body">
+        <strong>Permanently delete</strong> this [item]?
+      </div>
+      <div class="rs-popover-footer rs-btn-group">
+        <div class="rs-btn rs-btn-primary">Delete Item</div>
+        <div class="rs-btn rs-btn-link">Cancel</div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="rs-popover invisible" id="confirm-delete-popover-list-view">
+  <div class="rs-popover-arrow"></div>
+  <div class="rs-popover-content">
+    <form class="rs-form rs-form-horizontal">
+      <div class="rs-popover-body">
+        <strong>Permanently delete</strong> this [item]?
+      </div>
+      <div class="rs-popover-footer rs-btn-group">
+        <div class="rs-btn rs-btn-primary">Delete Item</div>
+        <div class="rs-btn rs-btn-link">Cancel</div>
+      </div>
+    </form>
   </div>
 </div>
