--- a/docs/_includes/popover-add-items.html
+++ b/docs/_includes/popover-add-items.html
@@ -1,43 +1,46 @@
-<div class="rs-popover hidden" id="add-items-popover">
+<div class="rs-popover invisible" id="add-items-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <div class="rs-popover-body">
-      <p>Add items to this product:</p>
-      <div class="rs-embedded-list-table-wrapper rs-embedded-medium">
-        <table class="rs-list-table rs-embedded-list-table rs-select-table">
-          <thead>
-            <tr>
-              <th class="rs-table-checkbox"></th>
-              <th>Name</th>
-              <th>IPv4</th>
-              <th>Detail</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="rs-table-checkbox"><input type="checkbox"></td>
-              <td class="rs-table-text">Item One</td>
-              <td class="rs-table-text">101.122.11.222</td>
-              <td>More Detail Here</td>
-            </tr>
-            <tr>
-              <td class="rs-table-checkbox"><input type="checkbox"></td>
-              <td class="rs-table-text">Item Two</td>
-              <td class="rs-table-text">10.111.22.112</td>
-              <td>More Detail Here</td>
-            </tr>
-            <tr>
-              <td class="rs-table-checkbox"><input type="checkbox"></td>
-              <td class="rs-table-text">Item Two</td>
-              <td class="rs-table-text">10.111.22.112</td>
-              <td>More Detail Here</td>
-            </tr>
-          </tbody>
-        </table>
+    <form class="rs-form rs-form-horizontal">
+      <div class="rs-popover-body">
+        <p>Add items to this product:</p>
+        <div class="rs-embedded-list-table-wrapper rs-embedded-medium">
+          <table class="rs-list-table rs-embedded-list-table rs-select-table">
+            <thead>
+              <tr>
+                <th class="rs-table-checkbox"></th>
+                <th>Name</th>
+                <th>IPv4</th>
+                <th>Detail</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="rs-table-checkbox"><input type="checkbox"></td>
+                <td class="rs-table-text">Item One</td>
+                <td class="rs-table-text">101.122.11.222</td>
+                <td>More Detail Here</td>
+              </tr>
+              <tr>
+                <td class="rs-table-checkbox"><input type="checkbox"></td>
+                <td class="rs-table-text">Item Two</td>
+                <td class="rs-table-text">10.111.22.112</td>
+                <td>More Detail Here</td>
+              </tr>
+              <tr>
+                <td class="rs-table-checkbox"><input type="checkbox"></td>
+                <td class="rs-table-text">Item Two</td>
+                <td class="rs-table-text">10.111.22.112</td>
+                <td>More Detail Here</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-  </div>
-  <div class="rs-popover-footer rs-btn-group">
-    <div class="rs-btn rs-btn-primary" onclick="hidePopover();">Add Selected Items</div>
-    <div class="rs-btn rs-btn-link">Cancel</div>
+      <div class="rs-popover-footer rs-btn-group">
+        <div class="rs-btn rs-btn-primary" onclick="hidePopover();">Add Selected Items</div>
+        <div class="rs-btn rs-btn-link">Cancel</div>
+      </div>
+    </form>
   </div>
 </div>
