--- a/docs/_includes/popover-rename-server.html
+++ b/docs/_includes/popover-rename-server.html
@@ -1,15 +1,31 @@
-<div class="rs-popover hidden" id="rename-server-popover">
+<div class="rs-popover invisible" id="rename-server-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
+    <form class="rs-form rs-form-vertical">
+      <div class="rs-popover-body">
+          <label>Item Name</label>
+          <input type="text" class="input-large" value="Item Name">
+      </div>
+      <div class="rs-popover-footer rs-btn-group">
+        <div class="rs-btn rs-btn-primary">Rename Item</div>
+        <div class="rs-btn rs-btn-link">Cancel</div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="rs-popover invisible" id="rename-server-popover-list-view">
+  <div class="rs-popover-arrow"></div>
+  <div class="rs-popover-content">
+    <form class="rs-form rs-form-vertical">
     <div class="rs-popover-body">
-      <form>
         <label>Item Name</label>
         <input type="text" class="input-large" value="Item Name">
-      </form>
     </div>
     <div class="rs-popover-footer rs-btn-group">
       <div class="rs-btn rs-btn-primary">Rename Item</div>
       <div class="rs-btn rs-btn-link">Cancel</div>
     </div>
+  </form>
   </div>
 </div>
