--- a/docs/_includes/popover-confirm-batch-delete.html
+++ b/docs/_includes/popover-confirm-batch-delete.html
@@ -1,7 +1,7 @@
 <div class="rs-popover invisible" id="confirm-batch-delete-popover">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
-		<form class="rs-form-horizontal rs-form-large">
+		<form class="rs-form rs-form-horizontal rs-form-large" action="javascript:exampleSubmit($(this));">
 			<div class="rs-popover-body">
 				<p><strong>Permanently delete</strong> the following <span id="deletion-count">3</span> items?</p>
 				<div class="rs-embedded-list-table-wrapper rs-embedded-small" style="min-width: 350px;">
