--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -1,13 +1,13 @@
 <div class="rs-popover invisible" id="confirm-delete-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-horizontal">
+    <form class="rs-form rs-form-horizontal" action="javascript:exampleSubmit($(this));">
       <div class="rs-popover-body">
         <strong>Permanently delete</strong> this [item]?
       </div>
       <div class="rs-popover-footer rs-btn-group">
-        <div class="rs-btn rs-btn-primary">Delete Item</div>
-        <div class="rs-btn rs-btn-link">Cancel</div>
+        <button type="submit" class="rs-btn rs-btn-primary">Delete Item</button>
+        <span class="rs-btn rs-btn-link">Cancel</button>
       </div>
     </form>
   </div>
@@ -16,13 +16,13 @@
 <div class="rs-popover invisible" id="confirm-delete-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-horizontal">
+    <form class="rs-form rs-form-horizontal" action="javascript:exampleSubmit($(this));">
       <div class="rs-popover-body">
         <strong>Permanently delete</strong> this [item]?
       </div>
       <div class="rs-popover-footer rs-btn-group">
-        <div class="rs-btn rs-btn-primary">Delete Item</div>
-        <div class="rs-btn rs-btn-link">Cancel</div>
+        <button type="submit" class="rs-btn rs-btn-primary">Delete Item</button>
+        <span class="rs-btn rs-btn-link">Cancel</span>
       </div>
     </form>
   </div>
