--- a/docs/_includes/popover-create-check.html
+++ b/docs/_includes/popover-create-check.html
@@ -1,7 +1,7 @@
 <div class="rs-popover invisible" id="create-check-popover-list-view">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
-		<form class="rs-form rs-form-horizontal rs-form-large">
+		<form class="rs-form rs-form-horizontal rs-form-large" action="javascript:exampleSubmit($(this));">
 			<div class="rs-popover-body">
 				<div class="rs-control-group">
 					<label class="rs-control-label">Check Type</label>
@@ -47,7 +47,7 @@
 <div class="rs-popover invisible" id="create-check-popover">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
-		<form class="rs-form rs-form-horizontal rs-form-large">
+		<form class="rs-form rs-form-horizontal rs-form-large" action="javascript:exampleSubmit($(this));">
 			<div class="rs-popover-body">
 				<div class="rs-control-group">
 					<label class="rs-control-label">Check Type</label>
