--- a/docs/_includes/popover-edit-item.html
+++ b/docs/_includes/popover-edit-item.html
@@ -1,7 +1,7 @@
 <div class="rs-popover invisible" id="edit-item-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form-horizontal rs-form-small">
+    <form class="rs-form rs-form-horizontal rs-form-small" action="javascript:exampleSubmit($(this));">
       <div class="rs-popover-body">
         <div class="rs-control-group">
           <label class="rs-control-label">Label One</label>
@@ -27,8 +27,8 @@
         </div>
       </div>
       <div class="rs-popover-footer rs-btn-group">
-        <div class="rs-btn rs-btn-primary">Save Settings</div>
-        <div class="rs-btn rs-btn-link">Cancel</div>
+        <button type="submit" class="rs-btn rs-btn-primary">Save Settings</button>
+        <span class="rs-btn rs-btn-link">Cancel</span>
       </div>
     </form>
   </div>
