--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,6 +20,7 @@
   <script type="application/javascript" src="/js/select-table.js"></script>
   <script type="application/javascript" src="/js/collapsible-section.js"></script>
   <script type="application/javascript" src="/js/overlay.js"></script>
+  <script type="application/javascript" src="/js/form.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
