[New Feature][Table Row Highlight] Adds 5 and 10 position values for blue, red, green and yellow colors in settings

--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -24,6 +24,9 @@ $grey-lightest: #ddd;
 // Red
 $red: #c40022;
 
+$red5: #faf2f2;
+$red10: #f8ebeb;
+
 $red50: #f8dfe3;
 $red100: #de7083;
 $red200: #d81436;
@@ -34,6 +37,9 @@ $red600: #a60004;
 
 // Yellow
 $yellow: #ff9d00;
+
+$yellow5: #fdf8f2;
+$yellow10: #fcf2e5;
 
 $yellow50: #ffedcf;
 $yellow100: #ffd477;
@@ -46,6 +52,9 @@ $yellow600: #e17f00;
 // Green
 $green: #00a96d;
 
+$green5: #f2f9f6;
+$green10: #e5f3eD;
+
 $green50: #cfefe4;
 $green100: #72d6b3;
 $green200: #14bd81;
@@ -56,6 +65,9 @@ $green600: #008b4f;
 
 // Blue
 $blue: #1e6ec1;
+
+$blue5: #f3f7fb;
+$blue10: #ecf2f9;
 
 $blue50: #d5e4f3;
 $blue100: #84b3e4;
