--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -11,6 +11,7 @@
 @import "layout";
 @import "sprites";
 @import "utilities";
+@import "animations";
 
 @import "patterns/buttons";
 @import "patterns/detail-view";
