--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -20,38 +20,26 @@
     }
   }
   &.selected:hover, &.selected.hover {
-    .rs-table-cell, td {
+    .rs-table-cell, td:not(.rs-table-status) {
       background-color: $blue10;
     }
   }
-  &.rs-status-ok {
-    .rs-table-cell, td {
-      background-color: $green5;
+  &.rs-heartbeat-ok {
+    .rs-table-cell, td:not(.rs-table-status) {
+      animation:heartbeat_success 4s;
+      -webkit-animation:heartbeat_success 4s;
     }
   }
-  &.rs-status-ok:hover, &.rs-status-ok.hover {
-    .rs-table-cell, td {
-      background-color: $green10;
+  &.rs-heartbeat-warning {
+    .rs-table-cell, td:not(.rs-table-status) {
+      animation:heartbeat_warning 4s;
+      -webkit-animation:heartbeat_warning 4s;
     }
   }
-  &.rs-status-warning {
-    .rs-table-cell, td {
-      background-color: $yellow5;
-    }
-  }
-  &.rs-status-warning:hover, &.rs-status-warning.hover {
-    .rs-table-cell, td {
-      background-color: $yellow10;
-    }
-  }
-  &.rs-status-error {
-    .rs-table-cell, td {
-      background-color: $red5;
-    }
-  }
-  &.rs-status-error:hover, &.rs-status-error.hover {
-    .rs-table-cell, td {
-      background-color: $red10;
+  &.rs-heartbeat-error {
+    .rs-table-cell, td:not(.rs-table-status) {
+      animation:heartbeat_error 4s;
+      -webkit-animation:heartbeat_error 4s;
     }
   }
 }
