--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,12 +4,12 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="/canon.css">
+  <link rel="stylesheet" href="/assets/canon.min.css">
   <link rel="stylesheet" type="text/css" href="/css/site.css">
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
 
-  <script type="application/javascript" src="/canon.js"></script>
   <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
+  <script type="application/javascript" src="/assets/canon.min.js"></script>
   <script type="application/javascript" src="/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="/js/site.js"></script>
   <script type="application/javascript" src="/js/popover.js"></script>
