[New Feature][Processing Indicator] Changes references to the CI builds for Canon CSS and JS to local files

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,11 +4,11 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="http://ci.canon.rackspace.com/view/Canon/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.css">
+  <link rel="stylesheet" href="/canon.css">
   <link rel="stylesheet" type="text/css" href="/css/site.css">
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
 
-  <script type="application/javascript" src="http://ci.canon.rackspace.com/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.js"></script>
+  <script type="application/javascript" src="/canon.js"></script>
   <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
   <script type="application/javascript" src="/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="/js/site.js"></script>
