--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -255,13 +255,13 @@ input::-moz-focus-inner {
   }
 
   .rs-processing-indicator {
-    margin-top: 4px;
+    margin-top: 6px;
     margin-left: -1px;
   }
 }
 
 .rs-processing-indicator {
-  @include icon;
+  @include icon(13px,12px);
   background-image: url('processing-indicator.gif');
 }
 
