[New Feature][Heartbeat] Changes canon.css reference to local css

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="http://ci.canon.rackspace.com/view/Canon/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.css">
+  <link rel="stylesheet" href="/canon.css">
   <link rel="stylesheet" type="text/css" href="/css/site.css">
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
 
