--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,7 @@
   <script type="application/javascript" src="/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="/js/site.js"></script>
   <script type="application/javascript" src="/js/popover.js"></script>
+  <script type="application/javascript" src="/js/heartbeat-example.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
