--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,10 +1,3 @@
-/* @override http://localhost:4000/css/site.css */
-
-/* @override http://localhost:4000/css/site.css */
-
-/* @override http://canon:8888/site.css */
-
-
 @font-face {
 	font-family: source-sans-pro-extra-light;
 	src: url(/fonts/SourceSansPro-ExtraLight.ttf);
@@ -346,10 +339,9 @@ dd
 	margin-bottom: 1em;
 }
 
-code
+.highlight pre code
 {
 	border: 1px solid #e1e1e8;
-	background-color: #f7f7f9;
 	padding: 0 8px;
 	-webkit-border-radius:3px;
 	-moz-border-radius:3px;
@@ -360,8 +352,8 @@ code
 	overflow: auto;
 }
 
-pre code {
-  padding: 3px 8px 2px;
+.highlight pre {
+	padding: 0;
 }
 
 .header-section
@@ -841,4 +833,46 @@ App Layout
 
 h4.rs-quiet, h4 .rs-quiet  {
   font-weight: bold;
+}
+
+.collapsible-highlight {
+	position: relative;
+}
+
+.collapsible-highlight code {
+  height: 100px;
+}
+
+.collapsible-highlight.expanded code {
+  height: auto;
+  max-height: none;
+}
+
+.collapsible-highlight .rs-toggle {
+  display:  none;
+  position: absolute;
+  left: 10px;
+  top: 100%;
+  padding: 3px 10px;
+  background-color: #1e6ec1;
+  color:  #fff;
+  cursor: pointer;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.collapsible-highlight .rs-toggle:hover {
+	text-decoration: underline;
+}
+
+.collapsible-highlight.hover code {
+	border-bottom:  1px #1e6ec1 solid;
+}
+
+.collapsible-highlight.hover .rs-toggle {
+	display: block;
 }
